[project]
name = "code-red"
version = "0.1.0"
description = ""
authors = [
    {name = "Aman Kadam",email = "126617073+AmanKadam-16@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "code_red", from = "src"}]

[tool.poetry.scripts]
start = "main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
